--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <button id="selectionsort" class="nav-item nav-link" href="#">selectionsort</button>
       </li>
           <li class="nav-item">
-          <button id="sourcecode" class="nav-item nav-link " href="https://github.com/mkmoiz/sortingVisualizer">source code</button>
+          <a id="sourcecode" class="nav-item nav-link " href="https://github.com/mkmoiz/sortingVisualizer">source code</a>
       </li>
     </ul>
 
