--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <a class="navbar-brand" href="#">Sorting visualizer</a>
  
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div>
     <ul class="navbar-nav mr-auto">
      
           <li class="nav-item">
